<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2">

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loan_amount"
                android:textColor="@android:color/black"/>

            <EditText android:id="@+id/loan_amount"
                android:layout_span="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="numberDecimal"
                android:textColor="@android:color/holo_green_dark" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/down_payment"
                android:textColor="@android:color/black" />

            <EditText android:id="@+id/down_payment"
                android:layout_span="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/term"
                android:textColor="@android:color/black" />

            <EditText android:id="@+id/term"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center"
                android:inputType="number"
                android:minWidth="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/year"
                android:textColor="@android:color/black"  />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/annual_interest_rate"
                android:textColor="@android:color/black" />

            <EditText android:id="@+id/annual_interest_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:minWidth="50dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/sym_percent"
                android:textColor="@android:color/black"  />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#0099CC"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg"
        android:stretchColumns="2" >

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_repayment"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sym_double_column"
                android:textColor="@android:color/black" />

            <TextView android:id="@+id/monthly_repayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|end"
                android:singleLine="true"
                android:text="@string/default_result"
                android:textColor="@android:color/black"  />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_repayment"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sym_double_column"
                android:textColor="@android:color/black" />

            <TextView android:id="@+id/total_repayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|end"
                android:singleLine="true"
                android:text="@string/default_result"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_interest"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sym_double_column"
                android:textColor="@android:color/black" />

            <TextView android:id="@+id/total_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/default_result"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/average_monthly_interest"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sym_double_column"
                android:textColor="@android:color/black" />

            <TextView android:id="@+id/average_monthly_interest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:singleLine="true"
                android:text="@string/default_result"
                android:textColor="@android:color/black" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="#0099CC">

        <TextView android:id="@+id/button_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_calculate"
            android:gravity="center"
            android:text="@string/calculate"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:onClick="onClick" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <TextView android:id="@+id/button_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_reset"
            android:gravity="center"
            android:text="@string/reset"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:onClick="onClick"/>

        <TextView android:id="@+id/button_test"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_reset"
            android:gravity="center"
            android:text="@string/test"
            android:textColor="@android:color/black"
            android:clickable="true"
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>
